--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@ body {
 
       <!-- Image and name container. Change to your picture here. -->
     <div class="image-container">
-    <img src="mypic.png" class="w3-margin" alt="Photo by Art Hauntington" max-width="100%" height="150px" style="border-radius: 50%; alt=">
+    <img src="mypic.png" class="w3-margin" alt="Photo by Art Hauntington" max-width="100%" height="150px" style="border-radius: 50%;">
      <div class="w3-text-white">
      <p class="w3-text-white w3-large">Welcome to All <span class="w3-tag w3-large w3-round w3-black w3-text-white"><strong></strong>My Name is Anmol Ratna</span> How can i help you</p>
-     <p class="w3-large"><strong>Message or follow me given social media platform</strong></p>
+     <p class="w3-large"><strong>Message and follow me given social media platform</strong></p>
       </div>
 
     <!-- Links section 1. Replace the # inside of the "" with your links. -->
@@ -82,7 +82,7 @@ body {
       <br>
       <a href="https://twitter.com/AnmolRa58124998" class="w3-button w3-hover-pink w3-large w3-round w3-purple w3-border link" target="_blank"><i class="fab fa-twitter"> </i>Twitter</a>
       <br>
-      <a href="linkedin.com/in/anmol-ratna-0a517321a" class="w3-button w3-hover-pink w3-large w3-round w3-purple w3-border link" target="_blank"><i class="fa fa-code"> </i>Linkedin</a>
+      <a href="https://www.linkedin.com/in/anmol-ratna-0a517321a/" class="w3-button w3-hover-pink w3-large w3-round w3-purple w3-border link" target="_blank"><i class="fa fa-code"> </i>Linkedin</a>
     </div>
   </div>
 </div>
